--- a/.github/workflows/template_ci.yml
+++ b/.github/workflows/template_ci.yml
@@ -10,6 +10,10 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   codeql:
     uses: ./.github/workflows/codeql.yml
@@ -28,56 +32,89 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.framework }}
+          cache: true
+
+      - name: Set environment
+        run: |
+          echo "DOTNET_CLI_TELEMETRY_OPTOUT=1" >> $GITHUB_ENV
+          echo "DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1" >> $GITHUB_ENV
+          echo "NUGET_PACKAGES=$HOME/.nuget/packages" >> $GITHUB_ENV
 
       - run: dotnet --info
 
       - name: Restore (TFM-scoped)
         env:
           FW: ${{ matrix.framework }}
+          STEP_NAME: RESTORE
         run: |
-          tfm="net${FW%.*}"
-          skipped=""
+          set -euo pipefail
+          FW_NOX="${FW%%.x}"
+          IFS='.' read -r major minor rest <<< "$FW_NOX"
+          minor="${minor:-0}"
+          tfm="net${major}.${minor}"
+          echo "Derived TFM: $tfm from framework input '$FW'"
+          : > skipped.txt
           for proj in ${{ inputs.projects }}; do
-            if [[ "$tfm" == "net9.0" ]] && grep -q "<TargetFramework.*net6.0" "$proj"; then
-              echo "Skipping restore for $proj on $tfm (contains net6.0)"
-              skipped="$skipped\n[RESTORE] $proj ($tfm)"
+            if ! grep -Eiq "net${major}\\.${minor}" "$proj"; then
+              echo "Skipping $proj (does not target $tfm)"
+              echo "[RESTORE] $proj ($tfm)" >> skipped.txt
               continue
             fi
             dotnet restore "$proj" --framework "$tfm"
           done
-          echo -e "$skipped" > skipped.txt
 
       - name: Build (TFM-scoped)
         env:
           FW: ${{ matrix.framework }}
         run: |
-          tfm="net${FW%.*}"
-          skipped=""
+          set -euo pipefail
+          FW_NOX="${FW%%.x}"
+          IFS='.' read -r major minor rest <<< "$FW_NOX"
+          minor="${minor:-0}"
+          tfm="net${major}.${minor}"
+          echo "Building for $tfm"
           for proj in ${{ inputs.projects }}; do
-            if [[ "$tfm" == "net9.0" ]] && grep -q "<TargetFramework.*net6.0" "$proj"; then
-              echo "Skipping build for $proj on $tfm"
-              skipped="$skipped\n[BUILD] $proj ($tfm)"
+            if ! grep -Eiq "net${major}\\.${minor}" "$proj"; then
+              echo "Skipping build $proj (missing $tfm)"
+              echo "[BUILD] $proj ($tfm)" >> skipped.txt
               continue
             fi
-            dotnet build "$proj" --framework "$tfm" --no-restore
+            dotnet build "$proj" --framework "$tfm" --no-restore -c Release
           done
-          echo -e "$skipped" >> skipped.txt
 
       - name: Test (TFM-scoped)
         env:
           FW: ${{ matrix.framework }}
         run: |
-          tfm="net${FW%.*}"
-          skipped=""
+          set -euo pipefail
+          FW_NOX="${FW%%.x}"
+          IFS='.' read -r major minor rest <<< "$FW_NOX"
+          minor="${minor:-0}"
+          tfm="net${major}.${minor}"
+          echo "Testing for $tfm"
           for proj in ${{ inputs.projects }}; do
-            if [[ "$tfm" == "net9.0" ]] && grep -q "<TargetFramework.*net6.0" "$proj"; then
-              echo "Skipping tests for $proj on $tfm"
-              skipped="$skipped\n[TEST] $proj ($tfm)"
+            if ! grep -Eiq "net${major}\\.${minor}" "$proj"; then
+              echo "Skipping test $proj (missing $tfm)"
+              echo "[TEST] $proj ($tfm)" >> skipped.txt
               continue
             fi
-            dotnet test "$proj" --framework "$tfm" --no-build
+            resultsDir="TestResults/${tfm}"
+            mkdir -p "$resultsDir"
+            dotnet test "$proj" --framework "$tfm" --no-build --configuration Release \
+              --logger "trx;LogFileName=${tfm}-results.trx" \
+              --collect "XPlat Code Coverage" \
+              --results-directory "$resultsDir" || echo "Test failures captured for $proj ($tfm)"
           done
-          echo -e "$skipped" >> skipped.txt
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results-${{ matrix.framework }}
+          path: |
+            TestResults/**
+            **/coverage.cobertura.xml
+          if-no-files-found: ignore
 
       - name: Summary of skipped projects
         if: always()
