--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -41,7 +41,7 @@ jobs:
       matrix:
         include:
         - language: csharp
-          build-mode: none
+          build-mode: manual
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -53,6 +53,24 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    # Generate lock files for .NET so dependency submission (CodeQL) finds them
+    - name: Restore .NET (generate lock files)
+      if: matrix.language == 'csharp'
+      run: |
+        set -euo pipefail
+        echo "Restoring .NET projects with lock file generation"
+        # Use solution if present; otherwise fall back to individual csproj files
+        if ls *.sln 1> /dev/null 2>&1; then
+          for sln in *.sln; do
+            echo "Restoring solution: $sln"
+            dotnet restore "$sln" --use-lock-file
+          done
+        else
+          echo "No solution file found; restoring individual projects"
+          find . -name '*.csproj' -maxdepth 6 -print0 | xargs -0 -I{} dotnet restore {} --use-lock-file
+        fi
+        echo "Lock files generated (packages.lock.json)"
 
     # Configure environment before firewall restrictions
     - name: Configure GitHub Actions environment
@@ -75,21 +93,13 @@ jobs:
         # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
 
-    # If the analyze step fails for one of the languages you are analyzing with
-    # "We were unable to automatically build your code", modify the matrix above
-    # to set the build mode to "manual" for that language. Then modify this step
-    # to build your code.
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-    - if: matrix.build-mode == 'manual'
-      shell: bash
+    - name: Build (manual single TFM for CodeQL)
+      if: matrix.language == 'csharp' && matrix.build-mode == 'manual'
       run: |
-        echo 'If you are using a "manual" build mode for one or more of the' \
-          'languages you are analyzing, replace this with the commands to build' \
-          'your code, for example:'
-        echo '  make bootstrap'
-        echo '  make release'
-        exit 1
+        set -euo pipefail
+        echo "Manual build for CodeQL semantic extraction (net9.0)"
+        # Build only once for highest supported TFM to capture symbols
+        dotnet build FastMoq.sln -c Release -f net9.0 /p:UseSharedCompilation=false --no-restore
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
