--- a/.github/workflows/template_ci.yml
+++ b/.github/workflows/template_ci.yml
@@ -66,7 +66,8 @@ jobs:
               echo "[RESTORE] $proj ($tfm)" >> skipped.txt
               continue
             fi
-            dotnet restore "$proj" --framework "$tfm" --use-lock-file --locked-mode
+            # dotnet restore does not support --framework; use MSBuild property instead
+            dotnet restore "$proj" -p:TargetFramework="$tfm" --use-lock-file --locked-mode
           done
 
       - name: Build (TFM-scoped)
