--- a/.github/workflows/ci_master.yml
+++ b/.github/workflows/ci_master.yml
@@ -2,30 +2,19 @@ name: CI (master)
 
 on:
   push:
-    branches: ["master"]
-
-permissions:
-  contents: read
+    branches:
+      - master
+    paths:
+      - .github/workflows/ci_master.yml
+      - FastMoq/
+      - FastMoq.Core/
+      - FastMoq.Web/
+      - FastMoq.Tests/
+      - FastMoq.Tests.Web/
 
 jobs:
-  build-test:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: |
-            8.0.x
-            9.0.x
-
-      - name: Restore
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --no-restore --configuration Release
-
-      - name: Test
-        run: dotnet test --no-build --configuration Release --verbosity normal
+  call-template:
+    uses: ./.github/workflows/template_ci.yml
+    with:
+      projects: "FastMoq.Tests/FastMoq.Tests.csproj FastMoq.Tests.Web/FastMoq.Tests.Web.csproj"
+      frameworks: '["8.0.x","9.0.x"]'
