--- a/.github/workflows/publish_pages.yml
+++ b/.github/workflows/publish_pages.yml
@@ -11,6 +11,8 @@ on:
     branches: [ master ]
     paths:
       - '.github/workflows/publish_pages.yml'
+      - 'Help/**'
+      - 'docs/**'
   workflow_dispatch:
   workflow_run:
     workflows: ["CI (master)"]
@@ -26,6 +28,7 @@ jobs:
   deploy:
     if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -33,6 +36,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Guard: Validate site content exists
+        run: |
+          set -euo pipefail
+          if [ ! -d Help ]; then
+            echo "Help directory missing; aborting publish." >&2
+            exit 1
+          fi
+          if [ ! -f Help/index.html ] && [ ! -f Help/Index.html ]; then
+            echo "No index.html/Index.html in Help; aborting publish." >&2
+            ls -al Help || true
+            exit 1
+          fi
+          echo "Help directory and index file found. Proceeding."
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
